# ESP32_MQTT_Control_project

./: ESP32ConTrol_last.html  README.md  index.html  sw.js
main/: CMakeLists.txt  aht30_sensor.c  aht30_sensor.h  ai_client.c  ai_client.h  app_config.h  app_state.c  app_state.h  app_time.c  app_time.h  buttons.c  buttons.h  dns_server.c  dns_server.h  i2c_bus.c  i2c_bus.h  index.html  main.c  max9814.c  max9814.h  mqtt_client_app.c  mqtt_client_app.h  oled_ui.c  oled_ui.h  rgb_led.c  rgb_led.h  voice_control.c  voice_control.h  weather_client.c  weather_client.h  web_server.c  wifi_portal.c  wifi_portal.h
remote/: manifest.webmanifest
tools/: voice_ai_gateway.py
